--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,height=device-height">
   <title>vuepro</title>
 </head>
 <body>
@@ -10,3 +10,18 @@
 <!-- built files will be auto injected -->
 </body>
 </html>
+
+<style>
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  div {
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    line-height: 100%;
+  }
+</style>
