--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
 <body>
 <div id="app"></div>
 <!-- built files will be auto injected -->
+<script>
+  document.body.addEventListener('touchmove', function (e) {
+    e.preventDefault();
+  }, {
+    passive: false
+  });
+</script>
 </body>
 </html>
 
 <style>
-  html, body {
-    height: 100%;
-    margin: 0;
+  html, body, #app {
     padding: 0;
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+    -webkit-overflow-scrolling: touch;
   }
 
   div {
